--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "node": "^16.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.13"
   }
 }
